force-app/main/default/objects/Contact/fields/Accreditation_previously_withdrawn__c.field-meta.xml
<CustomField>
    <fullName>Accreditation_previously_withdrawn__c</fullName>
    <label>Accreditation previously withdrawn</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>