force-app/main/default/objects/Contact/fields/Accredited_Products__c.field-meta.xml
<CustomField>
    <fullName>Accredited_Products__c</fullName>
    <label>Accredited Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Commercial IO</fullName>
            </value>
            <value>
                <fullName>Commercial SMSF</fullName>
            </value>
            <value>
                <fullName>Development &amp; Construction</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Residential Development</fullName>
            </value>
            <value>
                <fullName>Residential IO</fullName>
            </value>
            <value>
                <fullName>Residential SMSF</fullName>
            </value>
            <value>
                <fullName>Highest &amp; Best Use - Commercial</fullName>
            </value>
            <value>
                <fullName>Highest &amp; Best Use - Residential</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>