force-app/main/default/objects/Contact/fields/Age_of_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Age_of_Applicant__c</fullName>
    <formula>IF( NOT( ISBLANK( Birthdate) ) ,
IF( DATE( 2000 , MONTH( Birthdate) , DAY( Birthdate) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ),
YEAR (Today()) - YEAR ( Birthdate ),
YEAR (Today()) - YEAR ( Birthdate ) -1 ),
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age of Applicant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>