force-app/main/default/objects/Contact/fields/Ages__c.field-meta.xml
<CustomField>
    <fullName>Ages__c</fullName>
    <label>Ages</label>
    <length>255</length>
    <type>Text</type>
</CustomField>