force-app/main/default/objects/Contact/fields/Aggregator_Agreement_Declaration__c.field-meta.xml
<CustomField>
    <fullName>Aggregator_Agreement_Declaration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aggregator Agreement Declaration</label>
    <type>Checkbox</type>
</CustomField>