force-app/main/default/objects/Contact/fields/Applicant_reside_in_Australia__c.field-meta.xml
<CustomField>
    <fullName>Applicant_reside_in_Australia__c</fullName>
    <label>Applicant reside in Australia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>