force-app/main/default/objects/Contact/fields/Australian_Citizen__c.field-meta.xml
<CustomField>
    <fullName>Australian_Citizen__c</fullName>
    <label>Australian Citizen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>