force-app/main/default/objects/Contact/fields/BDM_Mobile__c.field-meta.xml
<CustomField>
    <fullName>BDM_Mobile__c</fullName>
    <label>BDM Mobile</label>
    <length>18</length>
    <type>Text</type>
</CustomField>