force-app/main/default/objects/Contact/fields/Been_Bankrupt__c.field-meta.xml
<CustomField>
    <fullName>Been_Bankrupt__c</fullName>
    <label>Previously Bankrupt?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>