force-app/main/default/objects/Contact/fields/Broker_ID__c.field-meta.xml
<CustomField>
    <fullName>Broker_ID__c</fullName>
    <description>assigns brokers a unique id number required by various aggregators to be assigned to their brokers when on boarded.

Jira Ticket: OIBCR-106</description>
    <displayFormat>{000000}</displayFormat>
    <label>Broker ID</label>
    <type>AutoNumber</type>
</CustomField>