force-app/main/default/objects/Contact/fields/Broker_ID_Pardot__c.field-meta.xml
<CustomField>
    <fullName>Broker_ID_Pardot__c</fullName>
    <label>Broker ID Pardot</label>
    <length>100</length>
    <type>Text</type>
</CustomField>