force-app/main/default/objects/Contact/fields/Broker_ID_Text__c.field-meta.xml
<CustomField>
    <fullName>Broker_ID_Text__c</fullName>
    <formula>Broker_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker ID (Text)</label>
    <type>Text</type>
</CustomField>