force-app/main/default/objects/Contact/fields/Broker_Underwriter__c.field-meta.xml
<CustomField>
    <fullName>Broker_Underwriter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Broker Underwriter</label>
    <type>Checkbox</type>
</CustomField>