force-app/main/default/objects/Contact/fields/clcommon__Birth_Place__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Birth_Place__c</fullName>
    <description>This field captures the birth place of the contact.</description>
    <inlineHelpText>This field captures the birth place of the contact.</inlineHelpText>
    <label>Birth Place</label>
    <length>255</length>
    <type>Text</type>
</CustomField>