force-app/main/default/objects/Contact/fields/clcommon__Country_of_Citizenship__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Country_of_Citizenship__c</fullName>
    <label>Country of Citizenship</label>
    <length>50</length>
    <type>Text</type>
</CustomField>