force-app/main/default/objects/Contact/fields/clcommon__Current_City__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Current_City__c</fullName>
    <description>This will store the Current City of Current Address Field Set</description>
    <label>Current City</label>
    <length>128</length>
    <type>Text</type>
</CustomField>