force-app/main/default/objects/Contact/fields/clcommon__Current_Country__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Current_Country__c</fullName>
    <description>This will store the current country of current address field set</description>
    <label>Current Country</label>
    <length>128</length>
    <type>Text</type>
</CustomField>