force-app/main/default/objects/Contact/fields/clcommon__Current_State__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Current_State__c</fullName>
    <description>This will store the Current State/Province of Current Address Field Set</description>
    <label>Current State/Province</label>
    <length>128</length>
    <type>Text</type>
</CustomField>