force-app/main/default/objects/Contact/fields/clcommon__Current_Street__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Current_Street__c</fullName>
    <description>This is Current Street of Current Address Field Set</description>
    <label>Current Street</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>