force-app/main/default/objects/Contact/fields/clcommon__Current_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Current_Zip_Code__c</fullName>
    <description>This will store the Current Zip/Postal Code of Current Address Field Set</description>
    <label>Current Zip/Postal Code</label>
    <length>32</length>
    <type>Text</type>
</CustomField>