force-app/main/default/objects/Contact/fields/clcommon__Employee__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Employee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Choose this option to mark the contact as Employee</description>
    <inlineHelpText>Choose this option to mark the contact as Employee</inlineHelpText>
    <label>Employee</label>
    <type>Checkbox</type>
</CustomField>