force-app/main/default/objects/Contact/fields/clcommon__Gender__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Gender__c</fullName>
    <description>This field captures the gender of the contact.</description>
    <inlineHelpText>This field captures the gender of the contact.</inlineHelpText>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>