force-app/main/default/objects/Contact/fields/clcommon__Generate_Invoice_Letter__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Generate_Invoice_Letter__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Check if invoices to be generated for this Contact</description>
    <inlineHelpText>Check if invoices to be generated for this Contact.</inlineHelpText>
    <label>Generate Invoice</label>
    <type>Checkbox</type>
</CustomField>