force-app/main/default/objects/Contact/fields/clcommon__Insider_Relationship__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Insider_Relationship__c</fullName>
    <description>Choose whether the Contact is an Insider or Related Interest of an Insider</description>
    <inlineHelpText>Choose whether the contact is an Insider or Related Interest of an Insider</inlineHelpText>
    <label>Insider Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insider</fullName>
            </value>
            <value>
                <fullName>Related Interest of Insider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>