force-app/main/default/objects/Contact/fields/clcommon__Is_Permanent_Resident__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Is_Permanent_Resident__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It will track the permanent residence status</description>
    <label>Is Permanent Resident</label>
    <type>Checkbox</type>
</CustomField>