force-app/main/default/objects/Contact/fields/clcommon__Last_4_Digits_of_SSN__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Last_4_Digits_of_SSN__c</fullName>
    <description>This field holds the SSN last 4 digits .This value should only be passed if the parent Account has a Legal Entity Type value = &quot;INDIVIDUAL&quot; or &quot;SOLE PROPRIETORSHIP&quot;.</description>
    <inlineHelpText>This field holds the SSN last 4 digits .</inlineHelpText>
    <label>Last 4 Digits of SSN</label>
    <length>4</length>
    <type>Text</type>
</CustomField>