force-app/main/default/objects/Contact/fields/clcommon__Mailing_Address_Same_as_Current_Address__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Mailing_Address_Same_as_Current_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It will  be checked if mailing and current address is same</description>
    <label>Same as Current Address</label>
    <type>Checkbox</type>
</CustomField>