force-app/main/default/objects/Contact/fields/clcommon__Marital_Status__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Marital_Status__c</fullName>
    <label>Marital Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>De Facto</fullName>
            </value>
            <value>
                <fullName>Divorced</fullName>
            </value>
            <value>
                <fullName>Married</fullName>
            </value>
            <value>
                <fullName>Separated</fullName>
            </value>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Widowed</fullName>
            </value>
            <value>
                <fullName>Not Provided</fullName>
                <isActive>false</isActive>
                <label>Not Provided</label>
            </value>
            <value>
                <fullName>Unmarried</fullName>
                <isActive>false</isActive>
                <label>Unmarried</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>