force-app/main/default/objects/Contact/fields/clcommon__Military_Relationship__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Military_Relationship__c</fullName>
    <label>Military Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Service Member</fullName>
            </value>
            <value>
                <fullName>Service Member Dependent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>