force-app/main/default/objects/Contact/fields/clcommon__Monthly_Residential_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Monthly_Residential_Payment_Amount__c</fullName>
    <description>This will track the payment amount depending on residential status</description>
    <label>Monthly Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>