force-app/main/default/objects/Contact/fields/clcommon__Months_at_current_address__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Months_at_current_address__c</fullName>
    <description>It will be part of Time at current address and track the months</description>
    <label>Months</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>