force-app/main/default/objects/Contact/fields/clcommon__Not_A_Citizen__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Not_A_Citizen__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will identify if the contact is not citizen of the country where the FI is located</description>
    <inlineHelpText>This field will identify if the contact is not citizen of the country where the FI is located</inlineHelpText>
    <label>Not A Citizen</label>
    <type>Checkbox</type>
</CustomField>