force-app/main/default/objects/Contact/fields/clcommon__Personal_Information__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Personal_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is a lookup to Personal Information</description>
    <inlineHelpText>This field is a lookup to Personal Information</inlineHelpText>
    <label>Personal Information</label>
    <referenceTo>clcommon__Personal_Information__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>