force-app/main/default/objects/Contact/fields/clcommon__Residential_Status__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Residential_Status__c</fullName>
    <description>It will track the residential status of person</description>
    <label>Residential Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Temporary</fullName>
            </value>
            <value>
                <fullName>Permanent</fullName>
            </value>
            <value>
                <fullName>Living with Parents</fullName>
                <isActive>false</isActive>
                <label>Living with Parents</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Own Home</fullName>
                <isActive>false</isActive>
                <label>Own Home</label>
            </value>
            <value>
                <fullName>Rent</fullName>
                <isActive>false</isActive>
                <label>Rent</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>