force-app/main/default/objects/Contact/fields/clcommon__Service_Member_Military_Status__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Service_Member_Military_Status__c</fullName>
    <label>Service Member Military Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active Duty</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Reserve</fullName>
            </value>
            <value>
                <fullName>Veteran</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>