force-app/main/default/objects/Contact/fields/clcommon__W9_Taxpayer__c.field-meta.xml
<CustomField>
    <fullName>clcommon__W9_Taxpayer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox will identify if the Individual relationship(Individual or Sole Proprietorship) is a W9 Taxpayer.</description>
    <inlineHelpText>This checkbox will identify if the Individual relationship(Individual or Sole Proprietorship) is a W9 Taxpayer.</inlineHelpText>
    <label>W9 Taxpayer</label>
    <type>Checkbox</type>
</CustomField>