force-app/main/default/objects/Contact/fields/clcommon__Years_At_Current_Address__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Years_At_Current_Address__c</fullName>
    <description>No of years at current address</description>
    <label>Years</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>