force-app/main/default/objects/Contact/fields/Enter_postal_address_manually__c.field-meta.xml
<CustomField>
    <fullName>Enter_postal_address_manually__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enter postal address manually</label>
    <type>Checkbox</type>
</CustomField>