force-app/main/default/objects/Contact/fields/Exit_Strategy_Commentary__c.field-meta.xml
<CustomField>
    <fullName>Exit_Strategy_Commentary__c</fullName>
    <label>Exit Strategy Commentary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>