force-app/main/default/objects/Contact/fields/Exit_Strategy_Suitable__c.field-meta.xml
<CustomField>
    <fullName>Exit_Strategy_Suitable__c</fullName>
    <label>Exit Strategy Suitable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>