force-app/main/default/objects/Contact/fields/Exit_Strategy_Suitable_Rule_Check__c.field-meta.xml
<CustomField>
    <fullName>Exit_Strategy_Suitable_Rule_Check__c</fullName>
    <description>Exit Strategy Suitable Rule Check</description>
    <formula>IF(IF(ISNULL(Birthdate),true,IF(ISPICKVAL(Exit_Strategy_Suitable__c,&apos;&apos;),true,false)),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exit Strategy Suitable Rule Check</label>
    <type>Checkbox</type>
</CustomField>