force-app/main/default/objects/Contact/fields/Guilty_of_a_Crime__c.field-meta.xml
<CustomField>
    <fullName>Guilty_of_a_Crime__c</fullName>
    <label>Previously Guilty of a Crime?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>