force-app/main/default/objects/Contact/fields/Has_applied_for_Permanent_Residency_Visa__c.field-meta.xml
<CustomField>
    <fullName>Has_applied_for_Permanent_Residency_Visa__c</fullName>
    <label>Has applied for Permanent Residency Visa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>