force-app/main/default/objects/Contact/fields/Housing_Status__c.field-meta.xml
<CustomField>
    <fullName>Housing_Status__c</fullName>
    <label>Housing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boarding</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Own Home</fullName>
            </value>
            <value>
                <fullName>Own Home Mortgage</fullName>
            </value>
            <value>
                <fullName>Renting</fullName>
            </value>
            <value>
                <fullName>Supplied by Employer</fullName>
            </value>
            <value>
                <fullName>With Parents</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>