force-app/main/default/objects/Contact/fields/ints__Coborrower__c.field-meta.xml
<CustomField>
    <fullName>ints__Coborrower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coborrower</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Coborrower</relationshipName>
    <type>Lookup</type>
</CustomField>