force-app/main/default/objects/Contact/fields/ints__Driver_License__c.field-meta.xml
<CustomField>
    <fullName>ints__Driver_License__c</fullName>
    <label>Driver License</label>
    <length>255</length>
    <type>Text</type>
</CustomField>