force-app/main/default/objects/Contact/fields/ints__SSN__c.field-meta.xml
<CustomField>
    <fullName>ints__SSN__c</fullName>
    <label>SSN(deprecated)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>