force-app/main/default/objects/Contact/fields/ints__University__c.field-meta.xml
<CustomField>
    <fullName>ints__University__c</fullName>
    <description>Contact University field for Lenddo verification.</description>
    <label>University</label>
    <length>100</length>
    <type>Text</type>
</CustomField>