force-app/main/default/objects/Contact/fields/Is_the_applicant_s_age_less_than_18_yrs__c.field-meta.xml
<CustomField>
    <fullName>Is_the_applicant_s_age_less_than_18_yrs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is the applicant&apos;s age less than 18 yrs?</label>
    <type>Checkbox</type>
</CustomField>