force-app/main/default/objects/Contact/fields/Is_this_the_Postal_Address__c.field-meta.xml
<CustomField>
    <fullName>Is_this_the_Postal_Address__c</fullName>
    <label>Is this the Postal Address</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>