force-app/main/default/objects/Contact/fields/loan__Tax_Id__c.field-meta.xml
<CustomField>
    <fullName>loan__Tax_Id__c</fullName>
    <description>Tax Id of the broker</description>
    <inlineHelpText>Tax Id of the broker</inlineHelpText>
    <label>Tax Id</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>