force-app/main/default/objects/Contact/fields/Mailing_Address_Street_Type__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address_Street_Type__c</fullName>
    <label>Mailing Address Street Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Address_Street_Type</valueSetName>
    </valueSet>
</CustomField>