force-app/main/default/objects/Contact/fields/Mailing_Address_Unit_No__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address_Unit_No__c</fullName>
    <label>Mailing Address Unit No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>