force-app/main/default/objects/Contact/fields/Main_Business_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Main_Business_Contacts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Main Business Contact</label>
    <type>Checkbox</type>
</CustomField>