force-app/main/default/objects/Contact/fields/Membership_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Membership_Expiry_Date__c</fullName>
    <label>Membership Expiry Date</label>
    <type>Date</type>
</CustomField>