force-app/main/default/objects/Contact/fields/Mortgage_Manager__c.field-meta.xml
<CustomField>
    <fullName>Mortgage_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mortgage Manager</label>
    <type>Checkbox</type>
</CustomField>