force-app/main/default/objects/Contact/fields/NCCP_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>NCCP_Transaction_Type__c</fullName>
    <label>NCCP Transaction Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regulated</fullName>
            </value>
            <value>
                <fullName>Unregulated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>