force-app/main/default/objects/Contact/fields/Obligations_Declaration__c.field-meta.xml
<CustomField>
    <fullName>Obligations_Declaration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Obligations Declaration</label>
    <type>Checkbox</type>
</CustomField>