force-app/main/default/objects/Contact/fields/ORDE_BDM__c.field-meta.xml
<CustomField>
    <fullName>ORDE_BDM__c</fullName>
    <formula>Owner.FirstName &amp; &quot; &quot; &amp; Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ORDE BDM</label>
    <type>Text</type>
</CustomField>