force-app/main/default/objects/Contact/fields/ORDE_BDM_Email__c.field-meta.xml
<CustomField>
    <fullName>ORDE_BDM_Email__c</fullName>
    <formula>Owner.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ORDE BDM Email</label>
    <type>Text</type>
</CustomField>