force-app/main/default/objects/Contact/fields/ORDE_BDM_Mobile__c.field-meta.xml
<CustomField>
    <fullName>ORDE_BDM_Mobile__c</fullName>
    <formula>Owner.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ORDE BDM Mobile</label>
    <type>Text</type>
</CustomField>