force-app/main/default/objects/Contact/fields/PEP__c.field-meta.xml
<CustomField>
    <fullName>PEP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Politically Exposed Person</description>
    <inlineHelpText>Politically Exposed Person</inlineHelpText>
    <label>PEP</label>
    <type>Checkbox</type>
</CustomField>